--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -1,5 +1,6 @@
 @import url('reset.css');
 @import url('global.css');
+@import url('components/_navigator.css');
 
 .s-wrapper {
     display: flex;
@@ -21,61 +22,4 @@
     width: 100%;
     background-color: gray;
     padding-left: 30px;
-}
-
-.navigator {
-    height: 80vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    position: relative;
-}
-
-.navigator ul li {
-    margin: 60px 0;
-}
-
-.navigator ul li:first-child {
-    margin-top: 0;
-}
-
-.navigator ul li:last-child {
-    margin-bottom: 0;
-}
-
-.navigator ul li a {
-    color: white;
-    border: solid 2px white;
-    width: 45px;
-    height: 45px;
-    border-radius: 15%;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.navigator::before { /*criando a linha do navigador*/
-    content: '';
-    position: absolute;
-    top: 0;
-    width: 2px;
-    height: 100%;
-    background-color: white;
-    z-index: 0; /* posição em Z na dimensão xyz*/
-}
-
-.navigator ul {
-    z-index: 1;
-}
-
-.navigator ul li a:hover, .navigator ul li a.active { /*efeito de hover no link pseudo-classe*/
-    color: var(--primary-color);
-    background-color: white;
-}
-
-.navigator .navigator__icon {
-    position: absolute;
-    top: -20px;
 }
