--- a/assets/css/internal.css
+++ b/assets/css/internal.css
@@ -2,6 +2,7 @@
 @import url('global.css');
 @import url('components/_navigator.css');
 @import url('components/_pills.css');
+@import url('components/_link-button.css');
 
 .s-wrapper {
     display: flex;
@@ -52,7 +53,7 @@
 .s-wrapper .s-main-content__top .s-description{
     background-color: rgba(0, 0, 0, .7);
     max-width: 50%;
-    padding: 20%;
+    padding: 20px;
     border-radius: 10px;
 }
 
@@ -63,4 +64,14 @@
 
 .s-wrapper .s-main-content__top .s-description .pills{
     margin-bottom: 20px;
+}
+
+.s-wrapper .s-main-content .s-links{
+    padding: 20px;
+    padding-left: 0;
+}
+
+.s-wrapper .s-main-content .s-links ul{
+    display: flex;
+    flex-direction: row;
 }
